--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: salc2 blog
-email: javiersalcedo75 [at] gmail [dot] com
+#email: javiersalcedo75 [at] gmail [dot] com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "http://blog.salc2.com" # the base hostname & protocol for your site
 twitter_username: salc2
 github_username:  salc2
 
