--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@
 title: salc2 blog
 #email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+        This is not a big deal blog, here I just share my testing about technologies 
+        I like things like functional programming, asynchronous approaches, JVM ecosystem, 
+        reactive programming, non-blocking, syntactic sugar, agile methodologies, eXtreme Programming,
+        devops, nosql, computer graphics 2d/3d, unix's command lines.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.salc2.com" # the base hostname & protocol for your site
 twitter_username: salc2
