--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: salc2 blog
 #email: 
 description: > # this means to ignore newlines until "baseurl:"
         This blog is not a big deal, here I just share my testing about technologies 
-        I like things like functional programming, asynchronous approaches, JVM ecosystem, 
+        I like, things like functional programming, asynchronous approaches, JVM ecosystem, 
         reactive programming, non-blocking, syntactic sugar, agile methodologies, eXtreme Programming,
-        devops, nosql, computer graphics 2d/3d, unix's command lines.
+        devops, nosql, computer graphics design 2d/3d, unix's command lines.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.salc2.com" # the base hostname & protocol for your site
 twitter_username: salc2
