--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: salc2 blog
 #email: 
 description: > # this means to ignore newlines until "baseurl:"
-        This blog is not a big deal, here I just share my testing about technologies 
-        I like, things like functional programming, asynchronous approaches, JVM ecosystem, 
+        Things about functional programming, asynchronous approaches, JVM ecosystem, 
         reactive programming, non-blocking, syntactic sugar, agile methodologies, eXtreme Programming,
         devops, nosql, computer graphics design 2d/3d, unix's command lines.
 baseurl: "" # the subpath of your site, e.g. /blog/
